[gd_scene load_steps=4 format=3 uid="uid://bxbxcigpne8qa"]

[ext_resource type="Script" uid="uid://b2nqpqyyhfcy3" path="res://FiiishUI/shop_frame_title_container.gd" id="1_ucrqs"]
[ext_resource type="Texture2D" uid="uid://dcfd2873d6qbm" path="res://Textures/UI/MiniButtons/mini_button_cross.png" id="2_ufhhs"]
[ext_resource type="Texture2D" uid="uid://bwu34lhb1b07u" path="res://Textures/UI/MiniButtons/mini_button_cross_focused.png" id="3_ufhhs"]

[node name="ShopFrameTitleContainer" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 42
theme_override_constants/margin_right = 32
script = ExtResource("1_ucrqs")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"LabelHeader"

[node name="CloseButton" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("2_ufhhs")
texture_focused = ExtResource("3_ufhhs")

[connection signal="pressed" from="HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
